Fix icon color and spacing

--- a/style.css
+++ b/style.css
@@ -13,6 +13,55 @@ html {
     --material-icon-font-size: 20px;
 
     font-family: var(--material-font-family);
+
+    --primary-text-color: #212121;
+    --secondary-text-color: #727272;
+    --text-primary-color: #ffffff;
+    --disabled-text-color: #bdbdbd;
+    --primary-color: #03a9f4;
+    --dark-primary-color: #0288d1;
+    --light-primary-color: #b3e5fC;
+    --accent-color: #ff9800;
+    --divider-color: rgba(0, 0, 0, .12);
+    --scrollbar-thumb-color: rgb(194, 194, 194);
+    --error-color: #db4437;
+    --state-icon-color: #44739e;
+    --state-icon-active-color: #FDD835;
+    --card-background-color: #ffffff;
+    --primary-background-color: #fafafa;
+    --secondary-background-color: #e5e5e5;
+    --label-badge-red: #DF4C1E;
+    --label-badge-blue: #039be5;
+    --label-badge-green: #0DA035;
+    --label-badge-yellow: #f4b400;
+    --paper-grey-50: #fafafa;
+    --paper-grey-200: #eeeeee;
+    --paper-grey-500: #9e9e9e;
+    --google-red-500: #db4437;
+    --google-blue-500: #4285f4;
+    --google-green-500: #0f9d58;
+    --google-yellow-500: #f4b400;
+    --paper-green-400: #66bb6a;
+    --paper-blue-400: #42a5f5;
+    --paper-orange-400: #ffa726;
+    --dark-divider-opacity: 0.12;
+    --dark-disabled-opacity: 0.38;
+    --dark-secondary-opacity: 0.54;
+    --dark-primary-opacity: 0.87;
+    --light-divider-opacity: 0.12;
+    --light-disabled-opacity: 0.3;
+    --light-secondary-opacity: 0.7;
+    --light-primary-opacity: 1.0;
+    --ha-paper-slider-pin-font-size: 15px;
+    --rgb-primary-color: 3, 169, 244;
+    --rgb-accent-color: 255, 152, 0;
+    --rgb-primary-text-color: 33, 33, 33;
+    --rgb-secondary-text-color: 114, 114, 114;
+    --rgb-text-primary-color: 255, 255, 255;
+    --rgb-card-background-color: 255, 255, 255;
+    --paper-spinner-color: var(--primary-color);
+    --error-state-color: var(--error-color);
+    --state-icon-unavailable-color: var(--disabled-text-color)
 }
 
 .contentWrapper {
